# b-route-meter

./: .gitignore  README.md  README.zh.md  __init__.py  broute_reader.py  config_flow.py  hacs.json  manifest.json  pyproject.toml  sensor.py
.github/workflows/: release.yml  test.yml
b_route_meter/: __init__.py  broute_reader.py  config_flow.py  const.py  manifest.json  sensor.py
b_route_meter/translations/: en.json  ja.json
custom_components/b_route_meter/: __init__.py  adapter_factory.py  adapter_interface.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/b_route_meter/adapters/: __init__.py  bp35a1.py  bp35c2.py
custom_components/b_route_meter/translations/: ja.json
tests/: README.md  __init__.py  conftest.py  test_basic_functionality.py  test_diagnostic.py
